# sml.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: build.yml  changelog.yml  links.yml  quality.yml  release.yml  safety.yml
benchmarks/: async_allocator_cpp.cpp  co_sm_inline_cpp.cpp  compare_compile_time.py  compare_extended.py  compare_machine_rtc.py  compare_sm_pool.py  compare_tensor_pool.py  player_cpp.cpp  sm_pool_cpp.cpp  sml_player_sm.hpp  tensor_pool_cpp.cpp  thread_pool_cpp.cpp
benchmarks/results/: 2026-07-13-machine-rtc.json
docs/: dsl.md  migrating-to-1.0.md  migrating-to-1.1.md  releasing.md  sml-cpp-examples.md  sml-cpp-parity.md  stability.md
examples/: async.rs  async_allocator_benchmark.rs  context.rs  dominos.rs  event_with_data.rs  event_with_mutable_data.rs  event_with_reference_data.rs  ex1.rs  ex2.rs  ex3.rs  generic_events.rs  guard_action_syntax.rs  guard_action_syntax_with_temporary_context.rs  guard_custom_error.rs  input_state_pattern_match.rs  named_async.rs  named_dominos.rs  named_ex1.rs  named_ex2.rs  named_ex3.rs  named_input_state_pattern_match.rs  named_state_with_data.rs  named_state_with_reference_data.rs  on_entry_on_exit_generic.rs  player_benchmark.rs  reuse_action.rs  sm_pool_benchmark.rs  starting_state_with_data.rs  state_machine_logger.rs  state_with_data.rs  state_with_reference_data.rs  tensor_pool_benchmark.rs  thread_pool_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: runtime_utilities.rs
macros/: Cargo.toml
macros/src/: codegen.rs  composite_codegen.rs  diagramgen.rs  lib.rs  orthogonal_codegen.rs  validation.rs
macros/src/parser/: cpp.rs  data.rs  event.rs  input_state.rs  lifetimes.rs  mod.rs  output_state.rs  state_machine.rs  transition.rs
sanitizer/: Cargo.toml
sanitizer/src/: main.rs
scripts/: prepare_machine_1_1_semver_baseline.py  prepare_semver_baseline.py  prepare_semver_negative_control.py  quality_gates.sh
src/: lib.rs  utility.rs
tests/: completion_event.rs  composite_dsl.rs  cpp_dsl.rs  eval_dsl.rs  exception_dsl.rs  generic_event_dsl.rs  orthogonal_dsl.rs  process_dsl.rs  sdl_adapter.rs  sml_cpp_examples.rs  test.rs  testing_and_visitor.rs  typed_state_dsl.rs  unexpected_event.rs  utility_test.rs
tests/compile-fail/: completion_mutable_reference.rs  completion_mutable_reference.stderr  composite_temporary_context_mismatch.rs  composite_temporary_context_mismatch.stderr  double_state_event.rs  double_state_event.stderr  duplicate_action.rs  duplicate_action.stderr  duplicate_guard.rs  duplicate_guard.stderr  generic_event_composite.rs  generic_event_composite.stderr  generic_event_defer.rs  generic_event_defer.stderr  generic_event_distributed_type_parameters.rs  generic_event_distributed_type_parameters.stderr  generic_event_exception_generic.rs  generic_event_exception_generic.stderr  generic_event_hrtb_shadowed_lifetime.rs  generic_event_hrtb_shadowed_lifetime.stderr  (+39 more)
(+3 files in other folders)
