[package]
name = "stateforward-sml"
categories = ["embedded", "no-std"]
authors = ["Emil Fresk <emil.fresk@gmail.com>", "Donny Zimmanck <dzimmanck@gmail.com>"]
description = "sml.rs: a no-std Rust implementation of the sml.cpp transition-table DSL"
keywords = ["dsl", "state-machine", "sml"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stateforward/sml.rs"
version = "1.0.0"
edition = "2018"
rust-version = "1.90"
readme = "README.md"
documentation = "https://docs.rs/stateforward-sml"
homepage = "https://github.com/stateforward/sml.rs"

[dependencies]
sml-macros = { package = "stateforward-sml-macros", path = "macros", version = "1.0.0" }

[dev-dependencies]
smol = "1"
derive_more = "0.99.17"
serde = {version = "1",features = ["derive"]}

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
trybuild = "1.0"

[[test]]
name = "test"

[profile.release]
codegen-units = 1
lto = true

[lib]
name = "sml"

[workspace]
members = ["macros"]

[features]
default = []

graphviz = ["sml-macros/graphviz"]
