[package]
name = "sml-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sml = { package = "stateforward-sml", path = ".." }

[[bin]]
name = "runtime_utilities"
path = "fuzz_targets/runtime_utilities.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
