[package]
name = "stateforward-sml-macros"
categories = ["embedded", "no-std"]
authors = ["Emil Fresk <emil.fresk@gmail.com>", "Donny Zimmanck <dzimmanck@gmail.com>"]
description = "Procedural macros for the sml.rs transition-table DSL"
keywords = ["dsl", "state-machine", "sml"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stateforward/sml.rs"
version = "1.2.0"
edition = "2018"
rust-version = "1.90"
readme = "../README.md"

[dependencies]
quote = "1"
proc-macro2 = "1"
# Structural Type equality is used to reject inconsistent state, event,
# context, and callback signatures. Token-string comparison is not equivalent.
syn = { version = "2", features = ["extra-traits", "visit"] }
string_morph = "0.1.0"

[lib]
name = "sml_macros"
proc-macro = true

[features]
graphviz = []
